syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Amargar.SellOrganizationCenterStatistician.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "SellOrganizationCenterStatisticianProto";
option objc_class_prefix = "HLW";

package Amargar;

service SellOrganizationCenterStatistician{
  rpc GetSellOrganizationCenterStatistician(SellOrganizationCenterStatisticianRequest) returns(SellOrganizationCenterStatisticianReplyList);
}

message SellOrganizationCenterStatisticianRequest{
  int32 StatisticianID = 1;
}

message SellOrganizationCenterStatisticianReply{
  int32 SellOrganizationCenterStatisticianID =1;
  int32 StatisticianID =2;
  int32 SellCenterID =3;
  string SellCenterName =4;
  int32 SellOrganizationID =5;
  string SellOrganizationName =6;
  int32 SellOrganizationCenterID =7;
  string SellOrganizationCenterName =8;
}

message SellOrganizationCenterStatisticianReplyList{
  repeated SellOrganizationCenterStatisticianReply SellOrganizationCenterStatisticians = 1;
}
